added requre fields to create trip and finish create trip functionality

--- a/src/components/custom-button/custom-button.scss
+++ b/src/components/custom-button/custom-button.scss
@@ -17,7 +17,11 @@
   justify-content: center;
   align-items: center;
   margin: auto;
-
+  img {
+    height: 20px;
+    width: 20px;
+    margin-left: 10px;
+  }
   &:hover {
     background-color: white;
     color: black;
