--- a/src/pages/create-ride/create-ride.scss
+++ b/src/pages/create-ride/create-ride.scss
@@ -1,4 +1,23 @@
+$tablet: 850px;
+$smartphone: 500px;
+$primaryColor: #000000;
+$secondaryColor: #ffffff;
+$shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
+
+// Mixin
+@mixin tablet {
+  @media (max-width: #{$tablet}) {
+    @content;
+  }
+}
+
+@mixin smartphone {
+  @media (max-width: #{$smartphone}) {
+    @content;
+  }
+}
 .create-ride {
+  padding: 0 20px;
   .success {
     position: fixed;
     top: 70px;
