--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Monoton|Lora|Montserrat:300,400,500,600&display=swap');
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 h1,
 h2,
 h3,
@@ -77,55 +72,13 @@ a {
   .wrapper {
     position: relative;
     margin: auto;
-    padding: 70px 20px;
+    padding-top: 70px;
     height: calc(100vh - 20px);
     width: 100%;
     max-width: 414px;
     background-color: white;
+    // overflow-x: hidden;
   }
-}
-
-.geolocate {
-  position: absolute;
-  z-index: 2;
-  bottom: 30vh;
-  right: 0;
-  margin: 10px;
-}
-.loading {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  text-align: center;
-  padding: 10px;
-}
-.loading img {
-  width: 50px;
-  height: 50px;
-}
-.loader-container,
-.start-container {
-  position: fixed;
-  background-color: rgba(255, 255, 255, 0.76);
-  right: 0;
-  left: 0;
-  bottom: 0;
-  height: calc(100vh - 50px);
-  display: flex;
-  z-index: 3;
-  text-align: center;
-}
-.start-container {
-  background-color: #ffffff;
-}
-.loader-container img {
-  height: 50px;
-  width: 50px;
-  margin: auto;
-}
-.start-container .start {
-  margin: auto;
 }
 @keyframes animateSideNav {
   0% {
