--- a/src/pages/foundtrippage/foundtrippage.scss
+++ b/src/pages/foundtrippage/foundtrippage.scss
@@ -16,6 +16,15 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
     @content;
   }
 }
-.find-ride {
+.foundtrippage {
+  height: 90vh;
+  overflow: hidden;
   padding: 0 20px;
+  &:hover {
+    overflow-y: scroll;
+  }
+  h1 {
+    font-size: 20px;
+    text-align: center;
+  }
 }
