--- a/src/components/trip-preview/trip-preview.scss
+++ b/src/components/trip-preview/trip-preview.scss
@@ -26,27 +26,52 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
       list-style: none;
     }
   }
-  .btn {
-    width: auto;
-    height: 35px;
-    letter-spacing: 0.5px;
-    padding: 0 20px;
-    font-size: 14px;
-    background-color: black;
-    color: white;
-    text-transform: uppercase;
-    font-weight: bolder;
-    border: none;
-    cursor: pointer;
+  form {
+    // width: 110px;
+    margin-top: 15px;
+    height: 50px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
-
-    &:hover {
+    .form-input {
+      background: none;
       background-color: white;
-      color: black;
-      border: 1px solid black;
+      color: lighten($color: #000000, $amount: 30);
+      font-size: 11px;
+      padding: 10px 10px 10px 5px;
+      display: block;
+      width: 100px;
+      border: none;
+      border-radius: 0;
+      border: 1px solid lighten($color: #000000, $amount: 30);
+      margin: 0 5px;
+      &:focus {
+        font-size: 15px;
+      }
+    }
+    .btn {
+      width: auto;
+      height: 35px;
+      letter-spacing: 0.5px;
+      padding: 0 20px;
+      font-size: 12px;
+      background-color: black;
+      color: white;
+      text-transform: uppercase;
+      font-weight: bolder;
+      border: none;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      // margin-top: 10px;
+
+      &:hover {
+        background-color: white;
+        color: black;
+        border: 1px solid black;
+      }
     }
   }
 }
