Fetching fast approching trips and output it to Homepage

--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -5,6 +5,12 @@
   width: 414px;
   .container {
     padding: 0 20px;
+    height: 70vh;
+    overflow: hidden;
+    padding: 0 20px;
+    &:hover {
+      overflow-y: scroll;
+    }
   }
   .landing {
   }
