--- a/src/components/trip-preview/trip-preview.scss
+++ b/src/components/trip-preview/trip-preview.scss
@@ -18,9 +18,25 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
 }
 
 .trip-preview {
+  position: relative;
   box-shadow: $shadow;
   padding: 20px;
   margin: 20px 0;
+  .success {
+    position: absolute;
+    top: -10px;
+    right: 0;
+    left: 0;
+    background-color: #affdaf;
+    color: green;
+    padding: 3px 10px;
+    border-radius: 3px;
+    font-size: 14px;
+    font-weight: 600;
+    animation: toggleShow 5s linear forwards;
+    z-index: 99;
+    text-align: center;
+  }
   ul {
     li {
       list-style: none;
