--- a/src/components/trip-preview/trip-preview.scss
+++ b/src/components/trip-preview/trip-preview.scss
@@ -22,6 +22,47 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
   box-shadow: $shadow;
   padding: 20px;
   margin: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  // text-align: center;
+  .trip-preview-info {
+    width: 70%;
+    span {
+      letter-spacing: 1px;
+      font-weight: 500;
+      line-height: 30px;
+      svg {
+        transform: rotate(180deg);
+        width: 15px;
+      }
+    }
+    .trip-info {
+      padding-right: 20px;
+      .trip-info-head,
+      .trip-info-date-time {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 5px 0;
+      }
+      .trip-info-head {
+        span {
+          text-transform: uppercase;
+        }
+      }
+      .trip-info-date-time {
+        span {
+          font-size: 13px;
+          color: lighten($color: $primaryColor, $amount: 60);
+        }
+      }
+      .vacant,
+      .car-type {
+        font-size: 14px;
+      }
+    }
+  }
   .success {
     position: absolute;
     top: -10px;
@@ -42,6 +83,7 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
       list-style: none;
     }
   }
+
   .btn {
     width: auto;
     height: 35px;
@@ -63,6 +105,24 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
       background-color: white;
       color: black;
       border: 1px solid black;
+    }
+  }
+  .joined {
+    background-color: #026602;
+    border: 1px solid #026602;
+    &:hover {
+      background-color: white;
+      color: #026602;
+      border-color: #026602;
+    }
+  }
+  .no-vacant {
+    background-color: #9c0b0b;
+    border: 1px solid #9c0b0b;
+    &:hover {
+      background-color: white;
+      color: #9c0b0b;
+      border-color: #9c0b0b;
     }
   }
   form {
