--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -1,6 +1,4 @@
 .home {
-  //   background-image: url('../../assets/home.gif');
-  //   background-size: cover;
   height: 100%;
   max-width: 414px;
   .container {
@@ -12,6 +10,7 @@
     }
     h1 {
       font-size: 16px;
+      font-weight: 500;
       text-align: center;
     }
   }
