--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -1,3 +1,27 @@
+$tablet: 850px;
+$smartphone: 500px;
+$iphoneX: 375px;
+$primaryColor: #000000;
+$secondaryColor: #ffffff;
+$shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
+
+// Mixin
+@mixin tablet {
+  @media (max-width: #{$tablet}) {
+    @content;
+  }
+}
+
+@mixin smartphone {
+  @media (max-width: #{$smartphone}) {
+    @content;
+  }
+}
+@mixin iphoneX {
+  @media (max-width: #{$iphoneX}) {
+    @content;
+  }
+}
 .home {
   height: 100%;
   max-width: 414px;
@@ -5,6 +29,9 @@
     height: 70vh;
     overflow-y: hidden;
     padding: 0 20px;
+    @include iphoneX() {
+      overflow-y: scroll;
+    }
     &:hover {
       overflow-y: scroll;
     }
@@ -13,7 +40,5 @@
       font-weight: 500;
       text-align: center;
     }
-  }
-  .landing {
   }
 }
