--- a/src/components/trip-preview/trip-preview.scss
+++ b/src/components/trip-preview/trip-preview.scss
@@ -38,6 +38,9 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
   // text-align: center;
   .trip-preview-info {
     width: 70%;
+    @include iphoneX() {
+      width: 100%;
+    }
     span {
       letter-spacing: 1px;
       font-weight: 500;
