--- a/src/components/trip-preview/trip-preview.scss
+++ b/src/components/trip-preview/trip-preview.scss
@@ -62,6 +62,7 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
       .trip-info-head {
         span {
           text-transform: uppercase;
+          font-size: 14px;
         }
       }
       .trip-info-date-time {
@@ -71,8 +72,9 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
         }
       }
       .vacant,
-      .car-type {
-        font-size: 14px;
+      .car-type,
+      .cost {
+        font-size: 13px;
       }
     }
   }
