--- a/src/components/form-select/form-select.scss
+++ b/src/components/form-select/form-select.scss
@@ -20,6 +20,7 @@
   background-repeat: no-repeat, repeat;
   background-position: right 0.7em top 50%, 0 0;
   background-size: 0.65em auto, 100%;
+  fill: #000000;
   &::-ms-expand {
     display: none;
   }
