--- a/src/pages/trippage/trippage.scss
+++ b/src/pages/trippage/trippage.scss
@@ -23,16 +23,13 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
   }
 }
 
-.trip-preview {
+.trip-page {
   position: relative;
-  box-shadow: $shadow;
   padding: 20px;
   margin: 20px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-radius: 10px;
-  cursor: pointer;
   @include iphoneX() {
     flex-direction: column-reverse;
   }
