--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -29,6 +29,7 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
     height: 70vh;
     overflow-y: hidden;
     padding: 0 20px;
+    text-align: center;
     @include iphoneX() {
       overflow-y: scroll;
     }
@@ -39,6 +40,33 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
       font-size: 16px;
       font-weight: 500;
       text-align: center;
+    }
+    .all-trip {
+      margin-top: 50px;
+      .btn {
+        width: 150px;
+        // width: auto;
+        height: 40px;
+        letter-spacing: 0.5px;
+        // padding: 0 35px 0 35px;
+        font-size: 14px;
+        background-color: black;
+        color: white;
+        text-transform: uppercase;
+        font-weight: bolder;
+        border: none;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: auto 5px;
+
+        &:hover {
+          background-color: white;
+          color: black;
+          border: 1px solid black;
+        }
+      }
     }
   }
 }
