--- a/src/pages/history/history.scss
+++ b/src/pages/history/history.scss
@@ -24,8 +24,17 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
 }
 
 .history {
-  text-align: center;
+  height: 90vh;
+  overflow: hidden;
+  padding: 0 20px;
+  @include iphoneX() {
+    overflow-y: scroll;
+  }
+  &:hover {
+    overflow-y: scroll;
+  }
   h1 {
     font-size: 20px;
+    text-align: center;
   }
 }
