--- a/src/components/side-nav/side-nav.scss
+++ b/src/components/side-nav/side-nav.scss
@@ -30,6 +30,18 @@
         letter-spacing: 2px;
         padding: 5px 20px;
         margin: 15px 0;
+        display: flex;
+        align-items: center;
+        span{
+          font-size: .9em;
+        }
+          .user-icon{
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            border: 1px solid white;
+            margin-right: 10px;
+          }
       }
     }
   }
