--- a/src/components/trip-preview/trip-preview.scss
+++ b/src/components/trip-preview/trip-preview.scss
@@ -53,6 +53,7 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
     }
     .trip-info {
       padding-right: 20px;
+      text-align: left !important;
       .trip-info-head,
       .trip-info-date-time {
         display: flex;
@@ -76,6 +77,23 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
       .car-type,
       .cost {
         font-size: 13px;
+        
+      }
+      .trip-owner{
+        text-align: left;
+        display: flex;
+        align-items: center;
+        img{
+          height: 100px;
+          width: 100px;
+          margin-right: 10px;
+        }
+        .text-content{
+          span{
+            font-size: 12px;
+            white-space: nowrap;
+          }
+        }
       }
     }
   }
@@ -101,7 +119,7 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
   }
 
   .btn {
-    width: auto;
+    width: 100%;
     height: 35px;
     letter-spacing: 0.5px;
     padding: 0 20px;
