--- a/src/pages/trippage/trippage.scss
+++ b/src/pages/trippage/trippage.scss
@@ -74,6 +74,20 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
       .cost {
         font-size: 13px;
       }
+      .trip-owner{
+        display: flex;
+        align-items: center;
+        img{
+          height: 100px;
+          width: 100px;
+          margin-right: 10px;
+        }
+        .text-content{
+          span{
+            font-size: 14px;
+          }
+        }
+      }
     }
   }
   .success {
@@ -92,14 +106,36 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
     text-align: center;
   }
   ul {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    
+    flex-wrap: nowrap;
     li {
       list-style: none;
+      width: 70px;
+    }
+    .passanger{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      margin: 6px;
+      img{
+        height: 70px;
+        width: 70px;
+      }
+
+      span{
+        line-height: 15px;
+        font-size: 12px;
+      }
     }
   }
 
   .btn {
-    width: auto;
-    height: 35px;
+    width: 100%;
+    height: 40px;
     letter-spacing: 0.5px;
     padding: 0 20px;
     font-size: 12px;
@@ -113,7 +149,10 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
     justify-content: center;
     align-items: center;
     // margin-top: 10px;
-
+        position: fixed;
+    bottom: 5px;
+    right: 0;
+    left: 0;
     &:hover {
       background-color: white;
       color: black;
