--- a/src/pages/trippage/trippage.scss
+++ b/src/pages/trippage/trippage.scss
@@ -26,7 +26,7 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
 .trip-page {
   position: relative;
   padding: 20px;
-  margin: 20px 0;
+  margin: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -150,7 +150,7 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
     align-items: center;
     // margin-top: 10px;
         position: fixed;
-    bottom: 5px;
+    bottom: 0px;
     right: 0;
     left: 0;
     &:hover {
