--- a/src/pages/edittrip/edittrip.scss
+++ b/src/pages/edittrip/edittrip.scss
@@ -29,8 +29,23 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
 }
 .create-ride {
   // padding: 0 20px;
-  .title {
-    padding: 10px 20px;
+  .edit-head {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .title {
+      padding: 10px 20px;
+    }
+    .cancel-trip {
+      font-size: 0.9em;
+      padding: 0.3em 2.5em;
+      border-radius: 200px;
+      // border: 1.3px solid $secondaryColor;
+      color: $secondaryColor;
+      background-color: red;
+      cursor: pointer;
+      margin-right: 20px;
+    }
   }
   form {
     padding: 0 20px;
