--- a/src/pages/login-register/loginAndRegister.scss
+++ b/src/pages/login-register/loginAndRegister.scss
@@ -2,6 +2,9 @@
   display: flex;
   align-items: flex-end;
   justify-content: center;
+  background-size: contain;
+  background-position: top;
+  background-repeat: no-repeat;
   height: 100%;
   width: 100%;
 
