--- a/src/pages/trippage/trippage.scss
+++ b/src/pages/trippage/trippage.scss
@@ -74,16 +74,16 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
       .cost {
         font-size: 13px;
       }
-      .trip-owner{
+      .trip-owner {
         display: flex;
         align-items: center;
-        img{
+        img {
           height: 100px;
           width: 100px;
           margin-right: 10px;
         }
-        .text-content{
-          span{
+        .text-content {
+          span {
             font-size: 14px;
           }
         }
@@ -109,31 +109,32 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
-    
+
     flex-wrap: nowrap;
     li {
       list-style: none;
       width: 70px;
     }
-    .passanger{
+    .passanger {
       display: flex;
       flex-direction: column;
       align-items: center;
       text-align: center;
       margin: 6px;
-      img{
+      img {
         height: 70px;
         width: 70px;
       }
 
-      span{
+      span {
         line-height: 15px;
         font-size: 12px;
       }
     }
   }
 
-  .btn {
+  .btn,
+  .message__btn {
     width: 100%;
     height: 40px;
     letter-spacing: 0.5px;
@@ -149,7 +150,7 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
     justify-content: center;
     align-items: center;
     // margin-top: 10px;
-        position: fixed;
+    position: fixed;
     bottom: 0px;
     right: 0;
     left: 0;
@@ -158,6 +159,9 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
       color: black;
       border: 1px solid black;
     }
+  }
+  .message__btn {
+    bottom: 50px;
   }
   .joined {
     background-color: #026602;
