--- a/src/components/Messages/Messages.scss
+++ b/src/components/Messages/Messages.scss
@@ -153,6 +153,7 @@ $shadow: 0px 3px 5px rgba(124, 124, 124, 0.747);
 .message-content {
   font-size: 12px;
   margin-top: -20px;
+  font-weight: 700;
 }
 .avatar {
   width: 50px;
